# TalkSpace

server/: .dockerignore  .gitignore  pyproject.toml
server/app/: settings.py
