[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["fu7ur3gh057 <fu7ur3gh057@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
yarl = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
